--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 ">
     <meta name="author" content="Colin H. Ho">
 
-    <title>Hi, I’m Colin H. Ho</title>
+    <title>Hi, I&#8217;m Colin H. Ho</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,6 +29,7 @@
     <![endif]-->
 
 </head>
+
 
 	<body>
 		<!-- Navigation -->
@@ -72,7 +73,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="intro-message">
-						<h1>Hi, I’m Colin H. Ho</h1>
+						<h1>Hi, I&#8217;m Colin H. Ho</h1>
 						<h3>Medical Student in Sydney, Australia</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
