--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 ">
     <meta name="author" content="Colin H. Ho">
 
-    <title>Hi, I&#8217;m Colin H. Ho</title>
+    <title>Colin H. Ho</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
